@@ -13,6 +13,7 @@
 - Hiztegien menua eguneratu da. (#139)
 - Euskalbarren bilaketa-kutxa hutsik dagoenean agertzen den jakinarazpenaren itxura hobetu da. (#140)
 - Testuinguru-menua beste modu batera antolatu da, gero eta baliabide gehiago izanik jadanik ez baitziren ongi sartzen pantailan. (#141)
+- GoiHata hiztegia berrezarri da.
 - Akatsen konponketa.
 
 3.11 bertsioa
